@@ -55,7 +55,7 @@ public:
 	or 0 on failure. */
 	virtual IReadFile* createAndOpenFile(const path& filename) =0;
 
-	//! Opens a file based on its position.
+	//! Opens a file based on its position in the file list.
 	/** Creates and returns
 	\param index The zero based index of the file.
 	\return Returns a pointer to the created file on success, or 0 on failure. */
